# RayTracer

./: .gitignore  CMakeLists.txt  Notes.docx  README.md  q
src/Bones/: Bones.h
src/RayTracer/: Camera.cpp  Camera.h  LewisMaths.cpp  LewisMaths.h  Light.cpp  Light.h  MCG_GFX_Lib.cpp  MCG_GFX_Lib.h  Macros.h  Multithreading.cpp  Multithreading.h  Object.cpp  Object.h  Ray.cpp  Ray.h  RayTracer.h  Sphere.cpp  Sphere.h  Tracer.cpp  Tracer.h
src/game/: main.cpp
